[gd_scene load_steps=2 format=3 uid="uid://j8x8x8x8x8x8"]

[ext_resource type="Script" uid="uid://c5682k5u8hyy" path="res://src/scripts/view/ui/PauseMenu.gd" id="1_0x8x8"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8x8")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -110.0
offset_right = 120.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -90.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quit to Menu"
